tests/ui/parser/issues/issue-107705.rs
//@ compile-flags: -C debug-assertions

fn f() {a(b:&, //~ ERROR this file contains an unclosed delimiter
